# goit-python-web-hw13-notebook_email_verification

./: .dockerignore  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  test.py
migrations/: env.py
migrations/versions/: fb7d35c88738_init.py
notebook_test_docs/: .env.example  .gitignore  docker-compose.yml  fake_test.py  main.py  pyproject.toml  test.db
notebook_test_docs/docs/: conf.py
notebook_test_docs/docs/_build/doctrees/: environment.pickle  index.doctree
notebook_test_docs/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
notebook_test_docs/docs/_build/html/_sources/: index.rst.txt
notebook_test_docs/migrations/: env.py
notebook_test_docs/migrations/versions/: 9ca5ed24dd8f_init.py
notebook_test_docs/src/conf/: config.py  messages.py
notebook_test_docs/src/db/: database.py  models.py
notebook_test_docs/src/repository/: contacts.py  users.py
notebook_test_docs/src/routes/: auth.py  contacts.py  users.py
notebook_test_docs/src/schemas/: contacts.py
notebook_test_docs/src/services/: auth.py  mail.py
notebook_test_docs/tests/: conftest.py  test_root.py  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
postgres-data/: postmaster.pid
postgres-data/base/1/: 2619  pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  1259_fsm  16394  16397  16399  16400  16405  16406  16408  16409  16410  16416  16417  16424  16425  16426  2224  (+31 more)
postgres-data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
postgres-data/pg_xact/: 0000
src/conf/: config.py
src/db/: database.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: users.py
src/services/: auth.py  mail.py
(+3 files in other folders)
